[project]
name = "gost-ra-client"
version = "0.1.0"
description = "Python/PySide client framework for enterprise RA and PKI REST APIs using mutual TLS authentication."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "uvicorn>=0.48.0",
]
